# housework_support

./: CMakeLists.txt  README.md  package.xml
config/: table_marker.yaml
euslisp/: fetch-store-objects-from-table-to-shelf.l  pr2-pick-object.l
launch/: fetch_store_obj_from_table_to_shelf.launch  pr2_pick_object.launch
rvizconfig/: fetch_store_obj_from_table_to_shelf.rviz
