<?xml version="1.0"?>
<package format="2">
  <name>housework_support</name>
  <version>0.0.0</version>
  <description>The housework_support package</description>

  <maintainer email="uchimi@jsk.imi.i.u-tokyo.ac.jp">Yuto Uchimi</maintainer>

  <license>BSD</license>

  <author email="uchimi@jsk.imi.i.u-tokyo.ac.jp">Yuto Uchimi</author>

  <exec_depend>jsk_interactive_marker</exec_depend>
  <exec_depend>jsk_pcl_ros</exec_depend>
  <exec_depend>jsk_rqt_plugins</exec_depend>
  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>rviz</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
